--- a/mediaquery_perfil/profile.css
+++ b/mediaquery_perfil/profile.css
@@ -1,299 +1,294 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-
-/* icono de menu  */
-
-@font-face {
-    font-family: 'icomoon';
-    src: url('../fonts/icomoon.eot?3ot2jt');
-    src: url('../fonts/icomoon.eot?3ot2jt#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?3ot2jt') format('truetype'), url('../fonts/icomoon.woff?3ot2jt') format('woff'), url('../fonts/icomoon.svg?3ot2jt#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-}
-
-[class^="icon-"],
-[class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-menu:before {
-    content: "\e9bd";
-}
-
-html,
-body {
-    margin: 0;
-    font-family: 'Oswald', sans-serif;
-}
-
-.burger-button {
-    margin: 10px;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgba(253, 171, 1, .7);
-    color: #000;
-    line-height: 50px;
-    text-align: center;
-    right: 0;
-    z-index: 20;
-    position: fixed;
-}
-
-.contenedor-header {
-    background-color: rgba(0, 0, 0, .4);
-    top: 0;
-    bottom: 0;
-    width: 50vw;
-    right: -780px;
-    padding-top: 70px;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 10;
-    transition: .5s;
-}
-
-.contenedor-header.is-active {
-    right: 0;
-}
-
-.contenedor-header .header1 {
-    font-size: 2rem;
-    font-weight: bolder;
-    margin-bottom: 50px;
-}
-
-.contenedor-header .header1 a {
-    font-size: 1.2em;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-    border: 1px solid white;
-    border-radius: 10px;
-    box-shadow: 2px 2px white;
-}
-
-.contenedor-header .header1 a:hover {
-    background-color: #088DD1;
-}
-
-.contenido .presentacion {
-    height: auto;
-    width: 100vw;
-    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* display: grid;
+        @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+    /* icono de menu  */
+    
+    @font-face {
+        font-family: 'icomoon';
+        src: url('../fonts/icomoon.eot?3ot2jt');
+        src: url('../fonts/icomoon.eot?3ot2jt#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?3ot2jt') format('truetype'), url('../fonts/icomoon.woff?3ot2jt') format('woff'), url('../fonts/icomoon.svg?3ot2jt#icomoon') format('svg');
+        font-weight: normal;
+        font-style: normal;
+        font-display: block;
+    }
+    
+    [class^="icon-"],
+    [class*=" icon-"] {
+        /* use !important to prevent issues with browser extensions that change fonts */
+        font-family: 'icomoon' !important;
+        speak: never;
+        font-style: normal;
+        font-weight: normal;
+        font-variant: normal;
+        text-transform: none;
+        line-height: 1;
+        /* Better Font Rendering =========== */
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+    
+    .icon-menu:before {
+        content: "\e9bd";
+    }
+    
+    html,
+    body {
+        margin: 0;
+        font-family: 'Oswald', sans-serif;
+    }
+    
+    .burger-button {
+        margin: 10px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: rgba(253, 171, 1, .7);
+        color: #000;
+        line-height: 50px;
+        text-align: center;
+        right: 0;
+        z-index: 20;
+        position: fixed;
+    }
+    
+    .contenedor-header {
+        background-color: rgba(0, 0, 0, .4);
+        top: 0;
+        bottom: 0;
+        width: 50vw;
+        right: -780px;
+        padding-top: 70px;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 10;
+        transition: .5s;
+    }
+    
+    .contenedor-header.is-active {
+        right: 0;
+    }
+    
+    .contenedor-header .header1 {
+        font-size: 2rem;
+        font-weight: bolder;
+        margin-bottom: 50px;
+    }
+    
+    .contenedor-header .header1 a {
+        font-size: 1.2em;
+        color: #fff;
+        text-decoration: none;
+        padding: 10px;
+        border: 1px solid white;
+        border-radius: 10px;
+        box-shadow: 2px 2px white;
+    }
+    
+    .contenedor-header .header1 a:hover {
+        background-color: #088DD1;
+    }
+    
+    .contenido .presentacion {
+        height: auto;
+        width: 100vw;
+        background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr; */
-    /* padding: 10px; */
-    text-align: center;
-}
-
-.contenido .presentacion .logo {
-    width: 100%;
-    margin-top: 70px;
-    margin-bottom: 50px;
-    justify-content: left;
-    justify-items: left;
-}
-
-.contenido .presentacion .logo img {
-    width: 250px;
-}
-
-.contenido .presentacion .img {
-    border-radius: 10px;
-    align-self: center;
-    margin-bottom: 50px;
-    /* transform: rotate(-25deg);
+        /* padding: 10px; */
+        text-align: center;
+    }
+    
+    .contenido .presentacion .logo {
+        width: 100%;
+        margin-top: 70px;
+        margin-bottom: 50px;
+        justify-content: left;
+        justify-items: left;
+    }
+    
+    .contenido .presentacion .logo img {
+        width: 250px;
+    }
+    
+    .contenido .presentacion .img {
+        border-radius: 10px;
+        align-self: center;
+        margin-bottom: 50px;
+        /* transform: rotate(-25deg);
     transition: .5s; */
-}
-
-.contenido .presentacion .img .img-photo {
-    width: 80%;
-    height: 250px;
-    border: 5px solid #fff;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px gray;
-    /* transform: scale(.8); */
-}
-
-
-/* .contenido .presentacion .img:hover {
+    }
+    
+    .contenido .presentacion .img .img-photo {
+        width: 80%;
+        height: 250px;
+        border: 5px solid #fff;
+        border-radius: 10px;
+        box-shadow: 10px 10px 10px gray;
+        /* transform: scale(.8); */
+    }
+    /* .contenido .presentacion .img:hover {
     transform: scale(1);
     transform: rotate(0deg);
 } */
-
-.contenido .descripcion {
-    animation-name: description;
-    animation-duration: 1.5s;
-}
-
-@keyframes description {
-    0% {
-        opacity: 0;
+    
+    .contenido .descripcion {
+        animation-name: description;
+        animation-duration: 1.5s;
     }
-    100% {
-        opacity: 1;
+    
+    @keyframes description {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
-}
-
-.contenido .presentacion .descripcion h2 {
-    font-size: 2em;
-    color: #f3ff3b;
-    font-weight: bolder;
-}
-
-.contenido .presentacion .descripcion p {
-    color: white;
-    font-size: 1.2em;
-    font-weight: bold;
-    justify-self: center;
-    align-items: center;
-    line-height: 50px;
-    letter-spacing: 1px;
-}
-
-.contenido .tiempo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 50px 0;
-}
-
-.contenido .tiempo .tiempo-titulo {
-    text-align: center;
-}
-
-.contenido .tiempo .tiempo-titulo h2 {
-    font-size: 1.2em;
-}
-
-.contenido .tiempo .tiempo-dividido {
-    width: 300px;
-    /* display: flex; */
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    line-height: 50px;
-}
-
-.contenido .tiempo .tiempo-dividido .actividades {
-    width: inherit;
-    /* display: flex; */
-    /* align-items: center;
+    
+    .contenido .presentacion .descripcion h2 {
+        font-size: 2em;
+        color: #f3ff3b;
+        font-weight: bolder;
+    }
+    
+    .contenido .presentacion .descripcion p {
+        color: white;
+        font-size: 1.2em;
+        font-weight: bold;
+        justify-self: center;
+        align-items: center;
+        line-height: 50px;
+        letter-spacing: 1px;
+    }
+    
+    .contenido .tiempo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 50px 0;
+    }
+    
+    .contenido .tiempo .tiempo-titulo {
+        text-align: center;
+    }
+    
+    .contenido .tiempo .tiempo-titulo h2 {
+        font-size: 1.2em;
+    }
+    
+    .contenido .tiempo .tiempo-dividido {
+        width: 300px;
+        /* display: flex; */
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        line-height: 50px;
+    }
+    
+    .contenido .tiempo .tiempo-dividido .actividades {
+        width: inherit;
+        /* display: flex; */
+        /* align-items: center;
     justify-content: center;
     flex-direction: column; */
-    border: 1px solid gray;
-    border-radius: 10px;
-    background-color: #DEF3F3;
-    /* box-shadow: 5px 5px 5px gray; */
-    margin-bottom: 20px;
-    /* padding: 15px; */
-}
-
-.contenido .tiempo .tiempo-dividido .actividades h4 {
-    color: #ed143d;
-    font-size: 1.2em;
-    font-weight: bold;
-    text-align: center;
-    margin: 0;
-}
-
-.contenido .tiempo .tiempo-dividido .actividades p {
-    color: #1B678C;
-    font-size: 1.2em;
-    font-weight: 500;
-    margin: 0;
-    padding: 0 5px;
-    text-align: center;
-}
-
-
-/* footer */
-
-footer {
-    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
-    text-align: center;
-    margin-top: 50px;
-    /* padding-top: 50px; */
-    padding: 10px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-footer .info-desa h3 {
-    font-weight: 300;
-    font-size: 1.2em;
-    line-height: 10px;
-    font-style: italic;
-    color: white;
-}
-
-footer .info-desa h3 img {
-    width: 40px;
-}
-
-footer .social-desa h1 {
-    color: #f3ff3b;
-    font-size: 1.5rem;
-    font-weight: 400;
-    font-style: italic;
-    letter-spacing: 5px;
-    line-height: 10px;
-}
-
-footer .social-desa a img {
-    width: 50px;
-    margin: 0 20px;
-    transform: scale();
-}
-
-footer .social-desa a img:hover {
-    animation-name: aumentar;
-    animation-duration: .5s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-}
-
-@keyframes aumentar {
-    0% {
-        transform: scale(1);
+        border: 1px solid gray;
+        border-radius: 10px;
+        background-color: #DEF3F3;
+        /* box-shadow: 5px 5px 5px gray; */
+        margin-bottom: 20px;
+        /* padding: 15px; */
     }
-    100% {
-        transform: scale(1.5);
+    
+    .contenido .tiempo .tiempo-dividido .actividades h4 {
+        color: #ed143d;
+        font-size: 1.2em;
+        font-weight: bold;
+        text-align: center;
+        margin: 0;
     }
-}
-
-footer .social-desa h3 {
-    font-size: 1rem;
-    font-style: italic;
-    font-weight: 300;
-    color: white;
-    margin-bottom: 30px;
-}
-
-footer .social-desa h3 img {
-    width: 30px;
-    padding-right: 10px;
-}
+    
+    .contenido .tiempo .tiempo-dividido .actividades p {
+        color: #1B678C;
+        font-size: 1.2em;
+        font-weight: 500;
+        margin: 0;
+        padding: 0 5px;
+        text-align: center;
+    }
+    /* footer */
+    
+    footer {
+        background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+        text-align: center;
+        margin-top: 50px;
+        /* padding-top: 50px; */
+        /* padding: 10px 0; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    footer .info-desa h3 {
+        font-weight: 300;
+        font-size: 1.2em;
+        line-height: 10px;
+        font-style: italic;
+        color: white;
+    }
+    
+    footer .info-desa h3 img {
+        width: 40px;
+    }
+    
+    footer .social-desa h1 {
+        color: #f3ff3b;
+        font-size: 1.5rem;
+        font-weight: 400;
+        font-style: italic;
+        letter-spacing: 5px;
+        line-height: 10px;
+    }
+    
+    footer .social-desa a img {
+        width: 50px;
+        margin: 0 20px;
+        transform: scale();
+    }
+    
+    footer .social-desa a img:hover {
+        animation-name: aumentar;
+        animation-duration: .5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+    }
+    
+    @keyframes aumentar {
+        0% {
+            transform: scale(1);
+        }
+        100% {
+            transform: scale(1.5);
+        }
+    }
+    
+    footer .social-desa h3 {
+        font-size: 1rem;
+        font-style: italic;
+        font-weight: 300;
+        color: white;
+        margin-bottom: 30px;
+    }
+    
+    footer .social-desa h3 img {
+        width: 30px;
+        padding-right: 10px;
+        /* } */
